# jsip-exchange

./: .gitignore  CLAUDE.md  exercise1before.txt
.claude/: settings.json
.github/workflows/: ci.yml
app/bots/src/: dune  jsip_bots.ml  jsip_bots.mli  slow_consumer.ml
app/bots/test/: test_bots.ml
app/dashboard/client/: app.ml  dune  main.ml  panes.ml  styles.ml
app/dashboard/controller/: controller.ml  controller.mli  dune
app/dashboard/protocol/: dune  jsip_dashboard_protocol.ml  jsip_dashboard_protocol.mli
app/dashboard/server/: dune  main.ml
app/market_maker/src/: market_maker.ml  market_maker.mli  market_maker_bot.ml  market_maker_bot.mli
app/market_maker/test/: test_market_maker.ml
app/monitor/src/: controller.ml  controller.mli  event_log.ml  event_log.mli  term_app.ml  term_app.mli
app/monitor/test/: test_controller.ml  test_event_log.ml
app/scenario_runner/src/: runner.ml
app/scenarios/src/: jsip_scenarios.ml
benchmark_test_outputs_part4/: assoc_tests.txt  symbol_lookup_after.txt
benchmark_test_outputs_part4/current_tests/: book_by_price_before.txt  snapshot_before.txt
benchmark_test_outputs_part4/old_tests/: seq_tests.txt  symbol_lookup_before.txt
dev/bench/: data.js
doc/: design-dashboard.md  design-exchange-stats.md
lib/bot_runtime/src/: bot_runtime.ml  bot_runtime.mli
lib/pnl/src/: pnl.ml  (+1 more)
performance/src/: associatives.ml  dune  histogram.ml  histogram.mli  jsip_exchange_perf_lib.ml  jsip_exchange_perf_lib.mli  replay.ml  replay.mli  sequences.ml  workload.ml  workload.mli
performance/test/: dune  test_histogram.ml
(+59 files in other folders)
